--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/Brymastr/foobot-telegram#readme",
   "dependencies": {
     "amqplib": "^0.5.1",
+    "async": "^2.1.5",
+    "promise-retry": "^1.1.1",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
   }
