--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "amqplib": "^0.5.1",
     "request": "^2.79.0",
     "request-promise-native": "^1.0.3"
+  },
+  "devDependencies": {
+    "mocha": "^3.2.0",
+    "rewire": "^2.5.2"
   }
 }
