--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
   "name": "foobot-telegram",
-  "version": "0.0.1",
-  "description": "Telegram component for Foobot",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
+  "dependencies": {
+    "amqplib": "^0.5.1",
+    "koa": "^2.3.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-router": "^7.2.1",
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.4",
+    "uuid": "^3.1.0"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "mocha",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Brymastr/foobot-telegram.git"
   },
-  "author": "Brycen Dorsay",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Brymastr/foobot-telegram/issues"
   },
-  "homepage": "https://github.com/Brymastr/foobot-telegram#readme",
-  "dependencies": {
-    "amqplib": "^0.5.1",
-    "request": "^2.79.0",
-    "request-promise-native": "^1.0.3"
-  },
-  "devDependencies": {
-    "mocha": "^3.2.0",
-    "rewire": "^2.5.2"
-  }
+  "homepage": "https://github.com/Brymastr/foobot-telegram#readme"
 }
