--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "request-promise-native": "^1.0.4",
     "uuid": "^3.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^3.4.2",
+    "rewire": "^2.5.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index"
